--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="scrape all the details of pasha companies directories">
+    <meta name="keywords" content="scraping, webscraping , web-scraping , scraping , web scraping , crawling , web crawling , hasnain karim , h26k2">
+    <meta name="author" content="hasnain karim , h26k2">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pasha Company Directory Scrape  </title>
+
+<style>
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+</style>
 </head>
 <body>
 
